Add song selection page

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "pnpx serve@latest out"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.10.1",
